# citranslation

./: README.md  pyproject.toml
cimig/Transaction and Translation Component/: error.csv  files-out-v4.csv  gen_file.csv  pom.xml  stats-out-v4.csv  test.csv
cimig/Transaction and Translation Component/JsonAsts/: githubJson--actions.yml.json  githubJson-3-actions.yml.json  travisJson-.json  travisJson-3.json
cimig/Transaction and Translation Component/JsonAstsForTAR/: githubJson-3dstreet_3dstreet-editor-actions.yml.json  githubJson-ChiragPritme_malware-actions.yml.json  githubJson-ComputationalPsychiatry_pyhgf-linting.yml.json  githubJson-ComputationalPsychiatry_pyhgf-test.yml.json  githubJson-EmilMaric_ws-rebalancer-build.yml.json  githubJson-EmilMaric_ws-rebalancer-release.yml.json  githubJson-HumanSignal_labelImg-actions.yml.json  githubJson-MarketSquare_awesome-robotframework-actions.yml.json  githubJson-NaturalHistoryMuseum_ckanext-versioned-datastore-actions.yml.json  githubJson-OpenAPITools_openapi-generator-pip-actions.yml.json  githubJson-OpenSimulationInterface_osi-validation-actions.yml.json  (+1359 more)
citranslation/actions_remaker/: analyzer.py  gha_analyzer.py  gha_dispatcher.py
citranslation/core/: CaculateAll.py  CheckBuildResult.py  DownloadRepo.py  GenCItraFiles.py  GenPlot.py  Iterative.py  SearchActions.py
citranslation/utils/: IOtools.py  genToken.py
scripts/: run_CaculateAll.py  run_CheckBuildResult.py  run_ControlVersion.py  run_DiffWorkflow.py  run_DownloadRepo.py  run_GenCItraFiles.py  run_GenPlot.py  run_Iterative.py  run_SearchActions.py
(+7090 files in other folders)
