[project]
name = "citranslation"
version = "0.1.0"
description = ""
authors = [
    { name = "123", email = "123@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "zss (>=1.2.0,<2.0.0)",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "pytorch-ignite (>=0.5.3,<0.6.0)",
    "efficient-apriori (>=2.0.6,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"